fixed spacing

--- a/public/style/transactions.css
+++ b/public/style/transactions.css
@@ -1,7 +1,9 @@
 .transactionContainer {
   display: inline-grid;
-  grid-template-columns: 15% 7% 24% 26% 25%;
-  padding: 12px;
+  grid-template-columns: 18% 10% 26% 26% 20%;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 10px;
 }
 
 #listTransactions {
